--- a/package.json
+++ b/package.json
@@ -18,24 +18,26 @@
     "@ryangjchandler/alpine-mask": "^0.2.0",
     "@tailwindcss/forms": "^0.5.4",
     "alpinejs": "^3.12.3",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.4.0",
     "cleave.js": "^1.6.0",
     "cssnano": "^6.0.1",
     "eleventy-hast-jsx": "^0.3.5",
     "eleventy-plugin-i18n": "^0.1.3",
     "esbuild": "^0.18.17",
+    "flowbite": "^3.1.2",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.27",
+    "postcss": "^8.5.2",
     "postcss-import": "^15.1.0",
     "swiper": "^10.3.1",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-dir": "^4.0.0"
   },
   "devDependencies": {
     "@types/alpinejs": "^3.7.2",
     "chokidar": "^3.5.3",
+    "daisyui": "^4.12.23",
     "tree-kill": "^1.2.2"
   }
 }
