--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-img": "^3.1.0",
+    "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "@ryangjchandler/alpine-mask": "^0.2.0",
     "@tailwindcss/forms": "^0.5.4",
     "alpinejs": "^3.12.3",
@@ -30,6 +32,8 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.2",
     "postcss-import": "^15.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "swiper": "^10.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-dir": "^4.0.0"
