--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "alpinejs": "^3.14.9",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "cleave.js": "^1.6.0",
     "cssnano": "^7.0.7",
     "eleventy-hast-jsx": "^0.3.5",
@@ -31,6 +32,9 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.5.3",
     "postcss-import": "^16.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.6",
     "tailwindcss-dir": "^4.0.0"
   },
